Remove z-index calls that caused a bug
Lost the cool box-shadows under each section,
but can try adding them again later.

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -5,7 +5,6 @@
 $nav-height: 2 * $gutter;
 
 nav {
-  z-index: 1;
   background-color: $green;
   padding: 0.5*$gutter $gutter;
 
