--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -13,7 +13,6 @@ h1 {
 }
 
 p {
-  z-index: inherit;
   font-family: $paragraph;
 }
 
